@@ -1,227 +1,230 @@
-# vnStat 2.9 config file
-##
+# vnStat 2.9 configuration file
+#
+# lines starting with # or ; are comments, everything has default
+# values, remove ; before each option to change its value
+
 
 # default interface (leave empty for automatic selection)
-Interface ""
+;Interface ""
 
 # location of the database directory
-DatabaseDir "/var/lib/vnstat"
+;DatabaseDir "/var/lib/vnstat"
 
 # locale (LC_ALL) ("-" = use system locale)
-Locale "-"
+;Locale "-"
 
 # date output formats for -d, -m, -t and -w
-DayFormat    "%Y-%m-%d"
-MonthFormat  "%Y-%m"
-TopFormat    "%Y-%m-%d"
+;DayFormat    "%Y-%m-%d"
+;MonthFormat  "%Y-%m"
+;TopFormat    "%Y-%m-%d"
 
 # characters used for visuals
-RXCharacter       "%"
-TXCharacter       ":"
-RXHourCharacter   "r"
-TXHourCharacter   "t"
+;RXCharacter       "%"
+;TXCharacter       ":"
+;RXHourCharacter   "r"
+;TXHourCharacter   "t"
 
 # how units are prefixed when traffic is shown
 # 0 = IEC standard prefixes (KiB/MiB/GiB...)
 # 1 = old style binary prefixes (KB/MB/GB...)
 # 2 = SI decimal prefixes (kB/MB/GB...)
-UnitMode 0
+;UnitMode 0
 
 # used rate unit (0 = bytes, 1 = bits)
-RateUnit 1
+;RateUnit 1
 
 # how units are prefixed when traffic rate is shown in bits
 # 0 = IEC binary prefixes (Kibit/s...)
 # 1 = SI decimal prefixes (kbit/s...)
-RateUnitMode 1
+;RateUnitMode 1
 
 # output style
 # 0 = minimal & narrow, 1 = bar column visible
 # 2 = same as 1 except rate in summary
 # 3 = rate column visible
-OutputStyle 3
-EstimateBarVisible 1
+;OutputStyle 3
+;EstimateBarVisible 1
 
 # number of decimals to use in outputs
-DefaultDecimals 2
-HourlyDecimals 1
+;DefaultDecimals 2
+;HourlyDecimals 1
 
 # spacer for separating hourly sections (0 = none, 1 = '|', 2 = '][', 3 = '[ ]')
-HourlySectionStyle 2
+;HourlySectionStyle 2
 
 # how many seconds should sampling for -tr take by default
-Sampletime 5
+;Sampletime 5
 
 # default query mode
 # 0 = normal, 1 = days, 2 = months, 3 = top, 5 = short
 # 7 = hours, 8 = xml, 9 = one line, 10 = json
-QueryMode 0
+;QueryMode 0
 
 # default list output entry limits (0 = all)
-List5Mins      24
-ListHours      24
-ListDays       30
-ListMonths     12
-ListYears       0
-ListTop        10
+;List5Mins      24
+;ListHours      24
+;ListDays       30
+;ListMonths     12
+;ListYears       0
+;ListTop        10
 
 # how to match interface given for query to interface in database
 # 0 = case sensitive exact match to interface name
 # 1 = method 0 followed by case sensitive exact match of alias
 # 2 = method 1 followed by case insensitive exact match of alias
 # 3 = method 2 followed by case insensitive beginning match of alias
-InterfaceMatchMethod 3
+;InterfaceMatchMethod 3
 
 
 # vnstatd
 ##
 
 # switch to given user when started as root (leave empty to disable)
-DaemonUser ""
+;DaemonUser ""
 
 # switch to given group when started as root (leave empty to disable)
-DaemonGroup ""
+;DaemonGroup ""
 
 # try to detect interface maximum bandwidth, 0 = disable feature
 # MaxBandwidth will be used as fallback value when enabled
-BandwidthDetection 1
+;BandwidthDetection 1
 
 # maximum bandwidth (Mbit) for all interfaces, 0 = disable feature
 # (unless interface specific limit is given)
-MaxBandwidth 1000
+;MaxBandwidth 1000
 
 # interface specific limits
-#  example 8Mbit limit for 'ethnone':
-MaxBWethnone 8
+#  example 8Mbit limit for eth0 (remove # to activate):
+#MaxBWeth0 8
 
 # data retention durations (-1 = unlimited, 0 = feature disabled)
-5MinuteHours   48
-HourlyDays      4
-DailyDays      62
-MonthlyMonths  25
-YearlyYears    -1
-TopDayEntries  20
+;5MinuteHours   48
+;HourlyDays      4
+;DailyDays      62
+;MonthlyMonths  25
+;YearlyYears    -1
+;TopDayEntries  20
 
 # how often (in seconds) interface data is updated
-UpdateInterval 20
+;UpdateInterval 20
 
 # how often (in seconds) interface status changes are checked
-PollInterval 5
+;PollInterval 5
 
 # how often (in minutes) data is saved to database
-SaveInterval 5
+;SaveInterval 5
 
 # how often (in minutes) data is saved when all interface are offline
-OfflineSaveInterval 30
+;OfflineSaveInterval 30
 
 # rescan database after save for new interfaces to be monitored (1 = enabled, 0 = disabled)
-RescanDatabaseOnSave 1
+;RescanDatabaseOnSave 1
 
 # automatically start monitoring all interfaces not found in the database
 # (1 = enabled, 0 = disabled)
-AlwaysAddNewInterfaces 0
+;AlwaysAddNewInterfaces 0
 
 # on which day should months change
-MonthRotate 1
-MonthRotateAffectsYears 0
+;MonthRotate 1
+;MonthRotateAffectsYears 0
 
 # filesystem disk space check (1 = enabled, 0 = disabled)
-CheckDiskSpace 1
+;CheckDiskSpace 1
 
 # how much the boot time can variate between updates (seconds)
-BootVariation 15
+;BootVariation 15
 
 # create database entries even when there is no traffic (1 = enabled, 0 = disabled)
-TrafficlessEntries 1
+;TrafficlessEntries 1
 
 # how many minutes to wait during daemon startup for system clock to
 # sync time if most recent database update appears to be in the future
-TimeSyncWait 5
+;TimeSyncWait 5
 
 # how often (in minutes) bandwidth detection is done when
 # BandwidthDetection is enabled (0 = disabled)
-BandwidthDetectionInterval 5
+;BandwidthDetectionInterval 5
 
 # force data save when interface status changes (1 = enabled, 0 = disabled)
-SaveOnStatusChange 1
+;SaveOnStatusChange 1
 
 # enable / disable logging (0 = disabled, 1 = logfile, 2 = syslog)
-UseLogging 2
+;UseLogging 2
 
 # create dirs if needed (1 = enabled, 0 = disabled)
-CreateDirs 1
+;CreateDirs 1
 
 # update ownership of files if needed (1 = enabled, 0 = disabled)
-UpdateFileOwner 1
+;UpdateFileOwner 1
 
 # file used for logging if UseLogging is set to 1
-LogFile "/var/log/vnstat/vnstat.log"
+;LogFile "/var/log/vnstat/vnstat.log"
 
 # file used as daemon pid / lock file
-PidFile "/var/run/vnstat/vnstat.pid"
+;PidFile "/var/run/vnstat/vnstat.pid"
 
 # 1 = 64-bit, 0 = 32-bit, -1 = old style logic, -2 = automatic detection
-64bitInterfaceCounters -2
+;64bitInterfaceCounters -2
 
 # use SQLite Write-Ahead Logging mode (1 = enabled, 0 = disabled)
-DatabaseWriteAheadLogging 0
+;DatabaseWriteAheadLogging 0
 
 # change the setting of the SQLite "synchronous" flag
 # (-1 = auto, 0 = off, 1, = normal, 2 = full, 3 = extra)
-DatabaseSynchronous -1
+;DatabaseSynchronous -1
 
 # database uses UTC instead of local timezone (1 = enabled, 0 = disabled)
-UseUTC 0
+;UseUTC 0
 
 
 # vnstati
 ##
 
 # title timestamp format
-HeaderFormat "%Y-%m-%d %H:%M"
+;HeaderFormat "%Y-%m-%d %H:%M"
 
 # show hours with rate (1 = enabled, 0 = disabled)
-HourlyRate 1
+;HourlyRate 1
 
 # show rate in summary (1 = enabled, 0 = disabled)
-SummaryRate 1
+;SummaryRate 1
 
 # transparent background (1 = enabled, 0 = disabled)
-TransparentBg 0
+;TransparentBg 0
 
 # image size control
-LargeFonts 0
-LineSpacingAdjustment 0
-ImageScale 100
-
-# hourly graph mode (0 = 24 hour sliding window, 1 = begins from midnight)
-HourlyGraphMode 0
+;LargeFonts 0
+;LineSpacingAdjustment 0
+;ImageScale 100
 
 # 5 minutes graph size control
-5MinuteGraphResultCount 576
-5MinuteGraphHeight 300
+;5MinuteGraphResultCount 576
+;5MinuteGraphHeight 300
+
+# hourly graph mode (0 = 24 hour sliding window, 1 = begins from midnight)
+;HourlyGraphMode 0
 
 # horizontal/vertical summary graph (0 = hours, 1 = 5 minutes)
-SummaryGraph 0
+;SummaryGraph 0
 
 # traffic estimate bar style
 # (0 = not shown, 1 = continuation of existing bar, 2 = separate bar)
-EstimateStyle 1
+;EstimateStyle 1
 
 # bar column in list outputs shows rate if OutputStyle is 3
 # (1 = enabled, 0 = disabled)
-BarColumnShowsRate 0
+;BarColumnShowsRate 0
 
 # image colors
-CBackground     "FFFFFF"
-CEdge           "AEAEAE"
-CHeader         "606060"
-CHeaderTitle    "FFFFFF"
-CHeaderDate     "FFFFFF"
-CText           "000000"
-CLine           "B0B0B0"
-CLineL          "-"
-CRx             "92CF00"
-CTx             "606060"
-CRxD            "-"
-CTxD            "-"
+;CBackground     "FFFFFF"
+;CEdge           "AEAEAE"
+;CHeader         "606060"
+;CHeaderTitle    "FFFFFF"
+;CHeaderDate     "FFFFFF"
+;CText           "000000"
+;CLine           "B0B0B0"
+;CLineL          "-"
+;CRx             "92CF00"
+;CTx             "606060"
+;CRxD            "-"
+;CTxD            "-"
