@@ -2,5 +2,6 @@
 #define CFGOUTPUT_H
 
 void printcfgfile(void);
+void defaultcomment(const int isdefault);
 
 #endif
